@@ -1,3 +1,7 @@
+16/01/2024:
+	- Added ability to specify lossless WebP compression by specifying a quality factor of -1
+
+
 15/01/2024:
 	- Fix to IIIF size calculation for region requests that go beyond the boundaries of the image
 
